Update exception filters to implement contract and provide a consistent Problem Details or Validation Problem Details Reposnse.
