# specs/back-end/webapi.openapi.yaml
@@ -27,21 +27,29 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TodoItem'
+        '400':
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
         '401':
           description: Unauthenticated
         '403':
           description: Unauthorized
+        '404':
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/NotFound"
         '5XX':
           description: Internal server error
           content:
             application/problem+json:
               schema:
-                $ref: "#/components/schemas/InternalError"
-              example:
-                type: "https://tools.ietf.org/html/rfc7231#section-6.6.1"
-                title: "Server error occurred."
-                status: 500,
-                traceId: c6b54e63-e576-4c14-8ccd-0315b60a1354
+                $ref: "#/components/schemas/InternalServerError"
+
     put:
       tags:
         - TodoItems
@@ -62,21 +70,28 @@ paths:
       responses:
         '204':
           description: No Content
+        '400':
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
         '401':
           description: Unauthenticated
         '403':
           description: Unauthorized
+        '404':
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/NotFound"
         '5XX':
           description: Internal server error
           content:
             application/problem+json:
               schema:
-                $ref: "#/components/schemas/InternalError"
-              example:
-                type: "https://tools.ietf.org/html/rfc7231#section-6.6.1"
-                title: "Server error occurred."
-                status: 500,
-                traceId: c6b54e63-e576-4c14-8ccd-0315b60a1354
+                $ref: "#/components/schemas/InternalServerError"
 
   /TodoItems:
     get:
@@ -99,12 +114,7 @@ paths:
           content:
             application/problem+json:
               schema:
-                $ref: "#/components/schemas/InternalError"
-              example:
-                type: "https://tools.ietf.org/html/rfc7231#section-6.6.1"
-                title: "Server error occurred."
-                status: 500,
-                traceId: c6b54e63-e576-4c14-8ccd-0315b60a1354        
+                $ref: "#/components/schemas/InternalServerError"
 
     post:
       tags:
@@ -123,6 +133,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/TodoItem'
+        '400':
+          description: Bad Request
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/BadRequest"
         '401':
           description: Unauthenticated
         '403':
@@ -132,13 +148,7 @@ paths:
           content:
             application/problem+json:
               schema:
-                $ref: "#/components/schemas/InternalError"
-              example:
-                type: "https://tools.ietf.org/html/rfc7231#section-6.6.1"
-                title: "Server error occurred."
-                status: 500,
-                traceId: c6b54e63-e576-4c14-8ccd-0315b60a1354
-
+                $ref: "#/components/schemas/InternalServerError"
 
 components:
   securitySchemes:
@@ -147,21 +157,86 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
-    InternalError:
+    BadRequest:
       type: object
       properties:
-        type:
-          type: string
-          description: URI reference that identifies the error type.
         title:
           type: string
           description: Summary of why the request failed.
-        status:
+        type:
           type: string
+          description: URI reference that identifies the error type.
+        status:
+          type: integer
+          description: The HTTP code.
+        errors:
+          type: object
+          description: Collection of validation failures.
+          additionalProperties:
+            type: array
+            items:
+              type: string
+        traceId:
+          type: string
+          description: Request identifier for support purposes.  
+      additionalProperties: false
+      example:
+        title: "One or more validation errors occurred."
+        type: "https://tools.ietf.org/html/rfc7231#section-6.5.1"
+        status: "400"
+        errors:
+          name:
+            - "Id"
+            - "Id can not be empty"
+        traceId: "00-abc123456789def-ghi987654321jkl-01"
+    NotFound:
+      type: object
+      properties:
+        title:
+          type: string
+          description: Summary of why the request failed.
+        type:
+          type: string
+          description: URI reference that identifies the error type.
+        detail:
+          type: string
+          description: A human-readable explanation specific to this occurrence of the problem.
+        status:
+          type: integer
           description: The HTTP code.
         traceId:
           type: string
           description: Request identifier for support purposes.
+      additionalProperties: false
+      example:
+        title: "The specified resource was not found."
+        type: "https://tools.ietf.org/html/rfc7231#section-6.5.4"
+        status: "404"
+        traceId: "00-abc123456789def-ghi987654321jkl-01"          
+    InternalServerError:
+      type: object
+      properties:
+        title:
+          type: string
+          description: Summary of why the request failed.
+        type:
+          type: string
+          description: URI reference that identifies the error type.
+        detail:
+          type: string
+          description: A human-readable explanation specific to this occurrence of the problem.
+        status:
+          type: integer
+          description: The HTTP code.
+        traceId:
+          type: string
+          description: Request identifier for support purposes.
+      additionalProperties: false
+      example:
+        title: "An error occurred while processing your request."
+        type: "https://tools.ietf.org/html/rfc7231#section-6.6.1"
+        status: "500"
+        traceId: "00-abc123456789def-ghi987654321jkl-01"          
     TodoItem:
       type: object
       properties:
