# src/back-end/TodoList.Api/ExceptionFilters/TodoItemValidationExceptionFilter.cs
@@ -1,4 +1,6 @@
-﻿using Microsoft.AspNetCore.Mvc;
+﻿using System.Diagnostics;
+using System.Net;
+using Microsoft.AspNetCore.Mvc;
 using Microsoft.AspNetCore.Mvc.Filters;
 using TodoList.Api.Constants;
 using TodoList.Application.Common.Exceptions;
@@ -13,10 +15,7 @@ namespace TodoList.Api.ExceptionFilters
         {
             if (context.Exception.GetType() != _exceptionType) return;
 
-            var validationProblemDetails = new ValidationProblemDetails(context.ModelState)
-            {
-                Type = ResponseTypes.BadRequest
-            };
+            var validationProblemDetails = new ValidationProblemDetails(context.ModelState);
 
             if (context.Exception is TodoItemValidationException exception)
             {
@@ -26,7 +25,17 @@ namespace TodoList.Api.ExceptionFilters
                 }
             }
 
-            context.Result = new BadRequestObjectResult(validationProblemDetails);
+            context.Result = new BadRequestObjectResult(new Generated.BadRequest
+            {
+                Title = validationProblemDetails.Title!,
+                Type = ResponseTypes.BadRequest,
+                Status = (int)HttpStatusCode.BadRequest,
+                Errors = validationProblemDetails.Errors.ToDictionary(
+                    kvp => kvp.Key, 
+                    kvp => kvp.Value.ToList()),
+                TraceId = Activity.Current?.Id ?? string.Empty
+            });
+
             context.ExceptionHandled = true;
         }
     }
